--- a/public/index.css
+++ b/public/index.css
@@ -20,7 +20,7 @@ dialog {
 }
 
 dialog::backdrop {
-  background: rgba(0, 0, 0, .4);
+  background: rgba(0, 0, 0, 0.4);
 }
 
 dialog button {
@@ -29,4 +29,9 @@ dialog button {
   border: none;
   border-radius: 3px;
   margin: 10px;
+}
+
+.person-image {
+  width: 100px;
+  height: auto;
 }
