--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,14 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#pickedPerson {
+  & img {
+    width: 138px;
+    height: 138px;
+    object-fit: cover;
+  }
+}
+
 #pickedPeople,
 #unpickedPeople {
   display: flex;
