--- a/public/index.css
+++ b/public/index.css
@@ -155,9 +155,9 @@ section.buttons {
   position: absolute;
   bottom: 50%; 
   left: 50%;
-  width: 30px;
-  height: 30px;
-  /* background-color: red; */
+  width: 50px;
+  height: 50px;
+  opacity: 0;
   clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
 .animate {
